// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-column-size-field Renders \`c-column-size-field\` with custom props 1`] = `
<div
  class="v-input c-column-size-field v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--row c-column-size-field--mobile"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        aria-labelledby="input-43"
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="custom_name"
              role="radio"
              type="radio"
              value="1"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="custom_name"
              role="radio"
              type="radio"
              value="2"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-column-size-field Renders \`c-column-size-field\` with required props 1`] = `
<div
  class="v-input c-column-size-field v-input--hide-details theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--row"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        aria-labelledby="input-15"
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio theme--light v-item--active"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              radio_button_checked
            </i>
            <input
              aria-checked="true"
              name="size"
              role="radio"
              type="radio"
              value="1"
            />
            <div
              class="v-input--selection-controls__ripple primary--text"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="2"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="3"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="4"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="6"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="12"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-column-size-field Renders \`c-column-size-field\` with tablet prop 1`] = `
<div
  class="v-input c-column-size-field v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--row"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        aria-labelledby="input-55"
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="1"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="2"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              radio_button_unchecked
            </i>
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="3"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio theme--light v-item--active"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              radio_button_checked
            </i>
            <input
              aria-checked="true"
              name="size"
              role="radio"
              type="radio"
              value="4"
            />
            <div
              class="v-input--selection-controls__ripple primary--text"
            />
          </div>
          <label
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-image v-responsive my-2 theme--light"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
